# NeuralLeet

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
NeuralLeet/core/: __init__.py  functional.py
NeuralLeet/nn/: __init__.py  mlp.py  module.py
examples/: mlp_main.py
tools/: dataloader.py
